--- a/external-secrets-placeholder.yaml
+++ b/external-secrets-placeholder.yaml
@@ -1,31 +1,55 @@
-# External Secrets Operator Placeholder
-#
-# This file serves as a placeholder to indicate that secrets are managed
-# by External Secrets Operator, not by hardcoded values in Git.
-#
-# The actual SecretStore and ExternalSecret resources are created by Terraform
-# in the dev/external-secrets.tf file, which dynamically references:
-# - Key Vault name from Terraform output
-# - User Assigned Identity ID from AKS cluster
-# - Tenant ID from Azure client config
-#
-# This approach ensures:
-# ✅ No sensitive values stored in Git
-# ✅ Dynamic configuration based on actual infrastructure
-# ✅ Terraform manages the complete lifecycle
-#
-# To see the actual External Secrets configuration, check:
-# - dev/external-secrets.tf (Terraform resources)
-# - kubectl get secretstore -n 3tirewebapp-dev (runtime SecretStore)
-# - kubectl get externalsecret -n 3tirewebapp-dev (runtime ExternalSecret)
-
+apiVersion: secrets-store.csi.x-k8s.io/v1
+kind: SecretProviderClass
+metadata:
+  name: postgres-secrets-provider
+  namespace: 3tirewebapp-dev
+spec:
+  provider: azure
+  parameters:
+    usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: "f560ce4f-f005-41e3-8420-edec93372a09"    # ← Update this
+    keyvaultName: "kv-dev-1dmih5es"                 # ← Update this  
+    tenantId: "cdda2269-5f0d-434b-8883-1399794a6c07"                    # ← Update this
+    objects: |
+      array:
+        - |
+          objectName: postgres-username
+          objectType: secret
+          objectVersion: ""
+        - |
+          objectName: postgres-password
+          objectType: secret
+          objectVersion: ""
+        - |
+          objectName: postgres-database
+          objectType: secret
+          objectVersion: ""
+        - |
+          objectName: postgres-connection-string
+          objectType: secret
+          objectVersion: ""
+  secretObjects:
+  - secretName: postgres-credentials-from-kv
+    type: Opaque
+    data:
+    - objectName: postgres-username
+      key: POSTGRES_USER
+    - objectName: postgres-password
+      key: POSTGRES_PASSWORD
+    - objectName: postgres-database
+      key: POSTGRES_DB
+    - objectName: postgres-connection-string
+      key: DATABASE_URL
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: secret-management-info
+  name: key-vault-config
   namespace: 3tirewebapp-dev
 data:
-  secret-provider: "external-secrets-operator"
-  managed-by: "terraform"
-  note: "Sensitive values are dynamically managed by External Secrets Operator"
-  documentation: "See dev/external-secrets.tf for Terraform configuration"
+  KEY_VAULT_NAME: "kv-dev-1dmih5es"                 # ← Update this
+  KEY_VAULT_SECRET_POSTGRES_USERNAME: "postgres-username"
+  KEY_VAULT_SECRET_POSTGRES_PASSWORD: "postgres-password"
+  KEY_VAULT_SECRET_POSTGRES_DATABASE: "postgres-database"
+  KEY_VAULT_SECRET_CONNECTION_STRING: "postgres-connection-string"
