--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -18,9 +18,9 @@ commonAnnotations:
 
 # Centralized image management
 images:
-  - name: balaramsangana94-sys/frontend
+  - name: itsbaivab/frontend
     newTag: v2
-  - name: balaramsangana94-sys/backend
+  - name: itsbaivab/backend
     newTag: latest
   - name: postgres
     newTag: "15"
